<resources>
    <string name="app_name">Battle\'s</string>

    <!--공통-->
    <string name="img_app_logo">logo image</string>
    <string name="ic_back">back icon</string>

    <!--메뉴-->
    <string name="frag_ar">camera</string>
    <string name="frag_map">map</string>
    <string name="frag_notification">notification</string>
    <string name="frag_temp">temp</string>

    <!--에러처리-->
    <string name="default_fail">네트워크연결이 원활하지 않습니다</string>

    <!-- 로그인 -->
    <string name="login">로그인</string>
    <string name="login_id_hint">아이디(이메일)</string>
    <string name="login_email_hint">직접입력</string>
    <string name="login_email_delimiter">\@</string>
    <string name="login_name_hint">이름</string>
    <string name="login_signup">회원가입</string>

    <!-- 프로필 -->
    <string name="myprofile">마이프로필</string>

    <!--fragment tag-->
    <string name="fragment_home">HomeFragment</string>
    <string name="fragment_board">BoardFragment</string>
    <string name="fragment_battle">BattleFragment</string>
    <string name="fragment_chart">ChartFragment</string>
    <string name="fragment_profile">ProfileFragment</string>
    <string name="fragment_battle_join">BattleJoinFragment</string>
    <string name="fragment_club_join">ClubJoinFragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>